# unifi-network-mcp

./: .env.example  CLAUDE.md  README.md  debug_gateway.py  docker-compose.yml  pyproject.toml  test_firewall_creation.py.disabled  test_wan_dream_machine.py
.github/workflows/: ci.yml  publish.yml
src/: runtime.py  validators.py
src/config/: config.yaml
src/managers/: client_manager.py  device_manager.py  dhcp_manager.py  firewall_manager.py  network_manager.py  system_manager.py  vpn_manager.py  wan_manager.py
src/tools/: dhcp.py  firewall.py  switch_ports.py  wan.py
tests/: test_device_manager.py  test_dhcp_manager.py  test_import.py
