[project]
name = "unifi-network-mcp"
version = "0.4.1"
description = "Model Context Protocol server for UniFi Network Controller management"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Chris Kirby", email = ""},  # Original author
    {name = "Zalimba79", email = ""},  # Your fork
]
keywords = ["unifi", "mcp", "network", "automation", "claude", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Networking",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "mcp[cli]>=1.6.0",
    "aiohttp>=3.8.5",
    "aiounifi>=83.0.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "omegaconf>=2.3.0",
    "jsonschema>=4.17.0",
    "typing-extensions>=4.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
# CLI entrypoint that launches the UniFi Network MCP server
unifi-network-mcp = "src.main:main"
mcp-server-unifi-network = "src.main:main"  # Alternative name

[project.urls]
Homepage = "https://github.com/Zalimba79/unifi-network-mcp"
Documentation = "https://github.com/Zalimba79/unifi-network-mcp#readme"
Repository = "https://github.com/Zalimba79/unifi-network-mcp.git"
Issues = "https://github.com/Zalimba79/unifi-network-mcp/issues"
